# ChangeLog for x11-drivers/xf86-video-i810
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-i810/Attic/ChangeLog,v 1.96 2008/07/02 10:02:55 remi Exp $

  02 Jul 2008; Rémi Cardona <remi@gentoo.org>
  -xf86-video-i810-2.3.0.ebuild, -xf86-video-i810-2.3.1.ebuild,
  -xf86-video-i810-2.3.1-r1.ebuild, -xf86-video-i810-2.3.1-r2.ebuild:
  clean up old releases

  01 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/0001-intel-fix-drm-check.patch, xf86-video-i810-2.3.1-r2.ebuild,
  xf86-video-i810-2.3.2.ebuild:
  (#227389) Fix building against released DRM versions. Don't assume libdrm
  2.3.1 has TTM support, push that to 2.4.0 instead.

*xf86-video-i810-2.3.2 (18 Jun 2008)

  18 Jun 2008; Rémi Cardona <remi@gentoo.org>
  +xf86-video-i810-2.3.2.ebuild:
  bump to 2.3.2

*xf86-video-i810-2.3.1-r2 (13 Jun 2008)

  13 Jun 2008; Rémi Cardona <remi@gentoo.org>
  files/2.3.1/0001-Skip-copying-on-FOURCC_XVMC-surfaces.patch,
  files/2.3.1/0002-Only-use-FOURCC_XVMC-when-INTEL_XVMC-is-defined.patch,
  files/2.3.1/0003-Panel-fitting-fix-letterbox-modes.patch,
  files/2.3.1/0004-Add-glproto-to-DRI-dependencies.patch,
  files/2.3.1/0005-Revert-Add-FIFO-watermark-regs-to-register-dumper.patch,
  +files/2.3.1/0006-Fix-typo-in-xvmc-block-destroy.patch,
  +files/2.3.1/0007-Define-DEFFILEMODE-for-OS-es-that-don-t-have-it.patch,
  +files/2.3.1/0008-Disable-a-bunch-of-clock-gating-disables-on-IGD_GM.patch
  , +files/2.3.1/0009-Fixup-power-saving-registers.patch,
  +files/2.3.1/0010-xvmc-remove-unused-dri-drawable.patch,
  +files/2.3.1/0011-xvmc-a-little-cleanup.patch,
  +files/2.3.1/0012-Set-SDVO-sync-polarity-to-default-on-965.patch,
  +files/2.3.1/0013-Just-remove-the-mprotect-kludge.patch,
  +files/2.3.1/0014-Replace-a-couple-of-wait-for-ring-idles-with-a-singl.pat
  ch,
  +files/2.3.1/0015-Remove-duplicated-i830_stop_ring-SetHWOperatingSta.patch
  ,