@@ -34,11 +34,13 @@ DIST xf86-video-intel-2.1.1.tar.bz2 584729 RMD160 47596231378bed5c9a48511318b6e5
 DIST xf86-video-intel-2.2.0.90.tar.bz2 602031 RMD160 bccabea790b876e8cab4ca6803b7a33cce697c6f SHA1 6c93afc8381c2b758f727f655dc61573a1f72b1d SHA256 f5705cdf3466954f50d2dd8565e05da37c5def10ae3f891e76a93c646eccabed
 DIST xf86-video-intel-2.2.1.tar.bz2 604749 RMD160 5746abeb91d5b017d54cb26d2689b34c492496a7 SHA1 7180c7ab83e3334053bd1bec1cdd1755b529e19c SHA256 d976c5f5e9c84f3817aba6ad22855446f1c2b9bfa0d53bd11c37c62cfdefa60a
 DIST xf86-video-intel-2.3.2.tar.bz2 665611 RMD160 5137493fb00b7a6fe3c03750f42599939a69c11b SHA1 86be1572c68a438bb92d40fff262b71d9e40c976 SHA256 060aaa267ded1d5d0987d077b1d4c027f99ee507cee8fd2e5233f15842f9ed27
+DIST xf86-video-intel-2.4.0.tar.bz2 683451 RMD160 bd5f75cfaebb8407e7f74062c21f07e6c8369c14 SHA1 f58223cfbd10bdf1f66ffc4a31ab9e716f13952a SHA256 1b0bffe1a0b7f340cb098e3c708d8da250e42b679022cf49961bcb309ef6038f
 EBUILD xf86-video-i810-1.6.5.ebuild 896 RMD160 6a6d6f0dc3f0b1e57a451caa3b0385772b035702 SHA1 e189063c5887b799d710e25a56ace1b3747c0648 SHA256 b4d2d7248c04d13c4f00a9b063f7d07fd43333da6170f474d701080957a38897
 EBUILD xf86-video-i810-1.7.4.ebuild 863 RMD160 6e9e46e03134f840dfcdc0263871bd77ac57b9af SHA1 2d523f124ccb9c19014c977091ec02414a7bc8bc SHA256 d8998319b1fe36e5d6be2fc001f8061fe1395644d13e191f952fca882aa41175
 EBUILD xf86-video-i810-2.1.1.ebuild 1248 RMD160 c527823789e4446ab2fe5202e9f88a78dbb10e17 SHA1 35e70791e36548ac34f10bd29f670f4fdf8e1de5 SHA256 8a2fe49a26577b0c1ec7f0adf89ede4014d7c9176909144c20071aa067f8dddf
 EBUILD xf86-video-i810-2.2.0.90.ebuild 1184 RMD160 9afd30f21c9112b2a70c8d6318465839de7ea4b9 SHA1 f7afbc5a7bfca23defa9e36e633563c5e24ddd93 SHA256 d763f3f3795fd8999daa9c3386e9c2f6408006eb3c2cfc3242aa31c8686bbab2
 EBUILD xf86-video-i810-2.2.1.ebuild 1246 RMD160 784e0fb29f68161a01f9f330caad8fb241196b66 SHA1 d8c938d8b33e97e79a36ad9481553ba54405eee8 SHA256 287b7127f3635d35b05dc6ec57fe9c3667b9d8dac586f0df782292c57de7bd4d
 EBUILD xf86-video-i810-2.3.2.ebuild 1243 RMD160 a181cae7052a45d4c0d311c0bfbffb000adf8726 SHA1 aeb643b781acec378b8adde57cf9b7cd8659b732 SHA256 267edfdebab39955765c314f04d59583bcfdb9952aed5d42f2b7f339863a7e9b
-MISC ChangeLog 19873 RMD160 337e06d0edd0e941bd548a41a7c2b2dc3f087013 SHA1 8adca148370104e96af0f6a48aa68aff1fa0f5bc SHA256 c49e9096231d88a9b140941136fba37f971c5e7e8441fdc2ab592059cc183d0a
+EBUILD xf86-video-i810-2.4.0.ebuild 1180 RMD160 633eba78ab222a0390fbf9780c60fc686c5eac5a SHA1 7133103f35d9d6b6e7a7e60ba8c9314128cb9151 SHA256 fcec2f0345c9f1fd3496f8d356f044fc453b9013d6788a2b7457300cc0cb5bd0
+MISC ChangeLog 20025 RMD160 2d3fc8c3489ddb7b8c0de0a0ab2a6876a9cd3adc SHA1 f543ee228010c2be1ba4125998617a3a67773e9c SHA256 c2bc62df3e091316e1a22f6050ff62f5c8e16970ea9fddbdf718a0a8efc3227a
 MISC metadata.xml 248 RMD160 1bc22252fb59ed171fe013e765baa171151843cf SHA1 1df26c31e85768bb440888be23ba6fdcb421843d SHA256 a52fe0f6937ba347182a10ae3c710ee5524086af9b011567f5629ba165bf7dcd
