@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-i810
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-i810/Attic/ChangeLog,v 1.96 2008/07/02 10:02:55 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-i810/Attic/ChangeLog,v 1.97 2008/08/03 21:50:55 remi Exp $
+
+*xf86-video-i810-2.4.0 (03 Aug 2008)
+
+  03 Aug 2008; Rémi Cardona <remi@gentoo.org>
+  +xf86-video-i810-2.4.0.ebuild:
+  bump to 2.4.0, see bug #232908
 
   02 Jul 2008; Rémi Cardona <remi@gentoo.org>
   -xf86-video-i810-2.3.0.ebuild, -xf86-video-i810-2.3.1.ebuild,
